--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.15",
     "axios": "^1.7.7",
     "next": "14.2.13",
     "react": "^18",
